# Summit_project

./: .gitignore  apache2.conf  db.sqlite3  notes.txt  pyproject.toml  pytest.ini  requirement.txt
Summit/: settings.py  urls.py
store/: admin.py  context_processors.py  forms.py  models.py  tests.py  urls.py  views.py
store/migrations/: 0001_initial.py  0003_auto_20210817_1638.py  0004_category_slug.py  0005_alter_category_slug.py  0006_alter_product_picture.py  0007_alter_product_picture.py  0008_product_inventory.py  0009_order.py  0010_order_featured.py
store/templates/: login.html  register.html
store/templates/store/: category_detail.html  category_update.html  main.html  product.html
store/templates/store/cart/: cart_add.html  summary.html
store/tests/: test_models.py  test_urls.py  test_views.py
store_venv/Scripts/: activate  activate.bat  django-admin.py
