[tool.poetry]
name = "summit_project"
version = "0.1.0"
description = ""
authors = ["NeoVic2006 <NeoVic2006@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
Django = "^3.2.6"
djangorestframework = "^3.12.4"
Pillow = "^8.3.1"
pytest = "^6.2.4"
pytest-django = "^4.4.0"
pytest-cov = "^2.12.1"
mixer = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
